fix invisible is removed before init is called fix icons broken in mobile mode fix max responsive line is 200px

--- a/less/main.less
+++ b/less/main.less
@@ -874,7 +874,7 @@ body {
     font-size: 3.5em;
     margin: 0;
     margin-bottom: 0.4em;
-    text-shadow: 2px 2px 1px #AAA;
+    text-shadow: 1px 1px 1px #AAA;
   } 
 
   height:174px;
